convert float to flex

--- a/index.html
+++ b/index.html
@@ -34,90 +34,92 @@
           <div class="banner">
             <img src="./images/main_banner_txt.png" alt="" />
           </div>
-          <div class="call">
-            <img src="images/main_call_tit.png" alt="상담문의전화" />
-            <img
-              src="images/main_call_txt.png"
-              alt="궁금하신 사항은 언제든지 전화주세요"
-            />
-            <img src="images/main_call_num.png" alt="02-123-4567" />
-            <img src="images/main_call_phone.png" alt="전화" />
-          </div>
-          <div class="qna">
-            <h3>질문과 답변</h3>
-            <table border="0">
-              <tbody>
-                <tr>
-                  <td>
-                    <img src="./images/ico_latest.gif" alt="" />
-                  </td>
-                  <td>
-                    <a href="#">테스트입니다.</a>
-                  </td>
-                  <td>20-05-13</td>
-                </tr>
-                <tr>
-                  <td>
-                    <img src="./images/ico_latest.gif" alt="" />
-                  </td>
-                  <td>
-                    <a href="#"
-                      >[문의] 분양상품 중 문의 드립니다. 빠른 답변
-                      부탁드립니다.</a
-                    >
-                  </td>
-                  <td>20-05-13</td>
-                </tr>
-                <tr>
-                  <td>
-                    <img src="./images/ico_latest.gif" alt="" />
-                  </td>
-                  <td>
-                    <a href="#"
-                      >[문의] 분양상품 중 문의 드립니다. 빠른 답변
-                      부탁드립니다.</a
-                    >
-                  </td>
-                  <td>20-05-13</td>
-                </tr>
-                <tr>
-                  <td>
-                    <img src="./images/ico_latest.gif" alt="" />
-                  </td>
-                  <td>
-                    <a href="#"
-                      >[문의] 분양상품 중 문의 드립니다. 빠른 답변
-                      부탁드립니다.</a
-                    >
-                  </td>
-                  <td>20-05-13</td>
-                </tr>
-                <tr>
-                  <td>
-                    <img src="./images/ico_latest.gif" alt="" />
-                  </td>
-                  <td>
-                    <a href="#"
-                      >[문의] 분양상품 중 문의 드립니다. 빠른 답변
-                      부탁드립니다.</a
-                    >
-                  </td>
-                  <td>20-05-13</td>
-                </tr>
-                <tr>
-                  <td>
-                    <img src="./images/ico_latest.gif" alt="" />
-                  </td>
-                  <td>
-                    <a href="#"
-                      >[문의] 분양상품 중 문의 드립니다. 빠른 답변
-                      부탁드립니다.</a
-                    >
-                  </td>
-                  <td>20-05-13</td>
-                </tr>
-              </tbody>
-            </table>
+          <div class="mainWrapper">
+            <div class="call">
+              <img src="images/main_call_tit.png" alt="상담문의전화" />
+              <img
+                src="images/main_call_txt.png"
+                alt="궁금하신 사항은 언제든지 전화주세요"
+              />
+              <img src="images/main_call_num.png" alt="02-123-4567" />
+              <img src="images/main_call_phone.png" alt="전화" />
+            </div>
+            <div class="qna">
+              <h3>질문과 답변</h3>
+              <table border="0">
+                <tbody>
+                  <tr>
+                    <td>
+                      <img src="./images/ico_latest.gif" alt="" />
+                    </td>
+                    <td>
+                      <a href="#">테스트입니다.</a>
+                    </td>
+                    <td>20-05-13</td>
+                  </tr>
+                  <tr>
+                    <td>
+                      <img src="./images/ico_latest.gif" alt="" />
+                    </td>
+                    <td>
+                      <a href="#"
+                        >[문의] 분양상품 중 문의 드립니다. 빠른 답변
+                        부탁드립니다.</a
+                      >
+                    </td>
+                    <td>20-05-13</td>
+                  </tr>
+                  <tr>
+                    <td>
+                      <img src="./images/ico_latest.gif" alt="" />
+                    </td>
+                    <td>
+                      <a href="#"
+                        >[문의] 분양상품 중 문의 드립니다. 빠른 답변
+                        부탁드립니다.</a
+                      >
+                    </td>
+                    <td>20-05-13</td>
+                  </tr>
+                  <tr>
+                    <td>
+                      <img src="./images/ico_latest.gif" alt="" />
+                    </td>
+                    <td>
+                      <a href="#"
+                        >[문의] 분양상품 중 문의 드립니다. 빠른 답변
+                        부탁드립니다.</a
+                      >
+                    </td>
+                    <td>20-05-13</td>
+                  </tr>
+                  <tr>
+                    <td>
+                      <img src="./images/ico_latest.gif" alt="" />
+                    </td>
+                    <td>
+                      <a href="#"
+                        >[문의] 분양상품 중 문의 드립니다. 빠른 답변
+                        부탁드립니다.</a
+                      >
+                    </td>
+                    <td>20-05-13</td>
+                  </tr>
+                  <tr>
+                    <td>
+                      <img src="./images/ico_latest.gif" alt="" />
+                    </td>
+                    <td>
+                      <a href="#"
+                        >[문의] 분양상품 중 문의 드립니다. 빠른 답변
+                        부탁드립니다.</a
+                      >
+                    </td>
+                    <td>20-05-13</td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
           </div>
         </div>
         <section>
@@ -180,189 +182,197 @@
               </a>
             </div>
           </aside>
-          <article>
-            <h3>
-              서울시 매물 정보<a href="#">
-                <img src="./images/ico_more.png" alt="" />
-              </a>
-            </h3>
-            <ul>
-              <li>
-                <img
-                  class="thumb"
-                  src="./images/thumbnail_sample1.jpg"
-                  alt="샘플 이미지"
-                />
-                <a href="#"
-                  >[아파트] 강변 신축아파트 분양 (방:5/욕실2) / 189㎡ / 매매가
-                  20,800 분양가 20,800</a
-                >
-              </li>
-              <li>
-                <img
-                  class="thumb"
-                  src="./images/thumbnail_sample2.jpg"
-                  alt="샘플 이미지"
-                />
-                <a href="#"
-                  >[아파트] 삼성동 전세 (방:3/욕실2) / 157㎡ / 매매가 21,100</a
-                >
-              </li>
-              <li>
-                <img
-                  class="thumb"
-                  src="./images/thumbnail_sample3.jpg"
-                  alt="샘플 이미지"
-                />
-                <a href="#"
-                  >[빌라] 안국동 매매 (방:8/욕실3) / 309㎡ / 매매가 11,800</a
-                >
-              </li>
-              <li>
-                <img
-                  class="thumb"
-                  src="./images/thumbnail_sample4.jpg"
-                  alt="샘플 이미지"
-                />
-                <a href="#"
-                  >[복층빌라] 한남동 월세 (방:4/욕실2) / 157㎡ / 보증금 3,000
-                  월세80</a
-                >
-              </li>
-              <li>
-                <img
-                  class="thumb"
-                  src="./images/thumbnail_sample5.jpg"
-                  alt="샘플 이미지"
-                />
-                <a href="#"
-                  >[아파트] 역삼동 급매 (방:3/욕실2) / 109㎡ / 매매가 11,800</a
-                >
-              </li>
-            </ul>
-          </article>
-          <article>
-            <h3>
-              경기도 매물 정보<a href="#">
-                <img src="./images/ico_more.png" alt="" />
-              </a>
-            </h3>
-            <ul>
-              <li>
-                <img
-                  class="thumb"
-                  src="./images/thumbnail_sample1.jpg"
-                  alt="샘플 이미지"
-                />
-                <a href="#"
-                  >[아파트] 강변 신축아파트 분양 (방:5/욕실2) / 189㎡ / 매매가
-                  20,800 분양가 20,800</a
-                >
-              </li>
-              <li>
-                <img
-                  class="thumb"
-                  src="./images/thumbnail_sample2.jpg"
-                  alt="샘플 이미지"
-                />
-                <a href="#"
-                  >[아파트] 삼성동 전세 (방:3/욕실2) / 157㎡ / 매매가 21,100</a
-                >
-              </li>
-              <li>
-                <img
-                  class="thumb"
-                  src="./images/thumbnail_sample3.jpg"
-                  alt="샘플 이미지"
-                />
-                <a href="#"
-                  >[빌라] 안국동 매매 (방:8/욕실3) / 309㎡ / 매매가 11,800</a
-                >
-              </li>
-              <li>
-                <img
-                  class="thumb"
-                  src="./images/thumbnail_sample4.jpg"
-                  alt="샘플 이미지"
-                />
-                <a href="#"
-                  >[복층빌라] 한남동 월세 (방:4/욕실2) / 157㎡ / 보증금 3,000
-                  월세80</a
-                >
-              </li>
-              <li>
-                <img
-                  class="thumb"
-                  src="./images/thumbnail_sample5.jpg"
-                  alt="샘플 이미지"
-                />
-                <a href="#"
-                  >[아파트] 역삼동 급매 (방:3/욕실2) / 109㎡ / 매매가 11,800</a
-                >
-              </li>
-            </ul>
-          </article>
-          <article>
-            <h3>
-              부산시 매물 정보<a href="#">
-                <img src="./images/ico_more.png" alt="" />
-              </a>
-            </h3>
-            <ul>
-              <li>
-                <img
-                  class="thumb"
-                  src="./images/thumbnail_sample1.jpg"
-                  alt="샘플 이미지"
-                />
-                <a href="#"
-                  >[아파트] 강변 신축아파트 분양 (방:5/욕실2) / 189㎡ / 매매가
-                  20,800 분양가 20,800</a
-                >
-              </li>
-              <li>
-                <img
-                  class="thumb"
-                  src="./images/thumbnail_sample2.jpg"
-                  alt="샘플 이미지"
-                />
-                <a href="#"
-                  >[아파트] 삼성동 전세 (방:3/욕실2) / 157㎡ / 매매가 21,100</a
-                >
-              </li>
-              <li>
-                <img
-                  class="thumb"
-                  src="./images/thumbnail_sample3.jpg"
-                  alt="샘플 이미지"
-                />
-                <a href="#"
-                  >[빌라] 안국동 매매 (방:8/욕실3) / 309㎡ / 매매가 11,800</a
-                >
-              </li>
-              <li>
-                <img
-                  class="thumb"
-                  src="./images/thumbnail_sample4.jpg"
-                  alt="샘플 이미지"
-                />
-                <a href="#"
-                  >[복층빌라] 한남동 월세 (방:4/욕실2) / 157㎡ / 보증금 3,000
-                  월세80</a
-                >
-              </li>
-              <li>
-                <img
-                  class="thumb"
-                  src="./images/thumbnail_sample5.jpg"
-                  alt="샘플 이미지"
-                />
-                <a href="#"
-                  >[아파트] 역삼동 급매 (방:3/욕실2) / 109㎡ / 매매가 11,800</a
-                >
-              </li>
-            </ul>
-          </article>
+          <div class="articleWrapper">
+            <article>
+              <h3>
+                서울시 매물 정보<a href="#">
+                  <img src="./images/ico_more.png" alt="" />
+                </a>
+              </h3>
+              <ul>
+                <li>
+                  <img
+                    class="thumb"
+                    src="./images/thumbnail_sample1.jpg"
+                    alt="샘플 이미지"
+                  />
+                  <a href="#"
+                    >[아파트] 강변 신축아파트 분양 (방:5/욕실2) / 189㎡ / 매매가
+                    20,800 분양가 20,800</a
+                  >
+                </li>
+                <li>
+                  <img
+                    class="thumb"
+                    src="./images/thumbnail_sample2.jpg"
+                    alt="샘플 이미지"
+                  />
+                  <a href="#"
+                    >[아파트] 삼성동 전세 (방:3/욕실2) / 157㎡ / 매매가
+                    21,100</a
+                  >
+                </li>
+                <li>
+                  <img
+                    class="thumb"
+                    src="./images/thumbnail_sample3.jpg"
+                    alt="샘플 이미지"
+                  />
+                  <a href="#"
+                    >[빌라] 안국동 매매 (방:8/욕실3) / 309㎡ / 매매가 11,800</a
+                  >
+                </li>
+                <li>
+                  <img
+                    class="thumb"
+                    src="./images/thumbnail_sample4.jpg"
+                    alt="샘플 이미지"
+                  />
+                  <a href="#"
+                    >[복층빌라] 한남동 월세 (방:4/욕실2) / 157㎡ / 보증금 3,000
+                    월세80</a
+                  >
+                </li>
+                <li>
+                  <img
+                    class="thumb"
+                    src="./images/thumbnail_sample5.jpg"
+                    alt="샘플 이미지"
+                  />
+                  <a href="#"
+                    >[아파트] 역삼동 급매 (방:3/욕실2) / 109㎡ / 매매가
+                    11,800</a
+                  >
+                </li>
+              </ul>
+            </article>
+            <article>
+              <h3>
+                경기도 매물 정보<a href="#">
+                  <img src="./images/ico_more.png" alt="" />
+                </a>
+              </h3>
+              <ul>
+                <li>
+                  <img
+                    class="thumb"
+                    src="./images/thumbnail_sample1.jpg"
+                    alt="샘플 이미지"
+                  />
+                  <a href="#"
+                    >[아파트] 강변 신축아파트 분양 (방:5/욕실2) / 189㎡ / 매매가
+                    20,800 분양가 20,800</a
+                  >
+                </li>
+                <li>
+                  <img
+                    class="thumb"
+                    src="./images/thumbnail_sample2.jpg"
+                    alt="샘플 이미지"
+                  />
+                  <a href="#"
+                    >[아파트] 삼성동 전세 (방:3/욕실2) / 157㎡ / 매매가
+                    21,100</a
+                  >
+                </li>
+                <li>
+                  <img
+                    class="thumb"
+                    src="./images/thumbnail_sample3.jpg"
+                    alt="샘플 이미지"
+                  />
+                  <a href="#"
+                    >[빌라] 안국동 매매 (방:8/욕실3) / 309㎡ / 매매가 11,800</a
+                  >
+                </li>
+                <li>
+                  <img
+                    class="thumb"
+                    src="./images/thumbnail_sample4.jpg"
+                    alt="샘플 이미지"
+                  />
+                  <a href="#"
+                    >[복층빌라] 한남동 월세 (방:4/욕실2) / 157㎡ / 보증금 3,000
+                    월세80</a
+                  >
+                </li>
+                <li>
+                  <img
+                    class="thumb"
+                    src="./images/thumbnail_sample5.jpg"
+                    alt="샘플 이미지"
+                  />
+                  <a href="#"
+                    >[아파트] 역삼동 급매 (방:3/욕실2) / 109㎡ / 매매가
+                    11,800</a
+                  >
+                </li>
+              </ul>
+            </article>
+            <article>
+              <h3>
+                부산시 매물 정보<a href="#">
+                  <img src="./images/ico_more.png" alt="" />
+                </a>
+              </h3>
+              <ul>
+                <li>
+                  <img
+                    class="thumb"
+                    src="./images/thumbnail_sample1.jpg"
+                    alt="샘플 이미지"
+                  />
+                  <a href="#"
+                    >[아파트] 강변 신축아파트 분양 (방:5/욕실2) / 189㎡ / 매매가
+                    20,800 분양가 20,800</a
+                  >
+                </li>
+                <li>
+                  <img
+                    class="thumb"
+                    src="./images/thumbnail_sample2.jpg"
+                    alt="샘플 이미지"
+                  />
+                  <a href="#"
+                    >[아파트] 삼성동 전세 (방:3/욕실2) / 157㎡ / 매매가
+                    21,100</a
+                  >
+                </li>
+                <li>
+                  <img
+                    class="thumb"
+                    src="./images/thumbnail_sample3.jpg"
+                    alt="샘플 이미지"
+                  />
+                  <a href="#"
+                    >[빌라] 안국동 매매 (방:8/욕실3) / 309㎡ / 매매가 11,800</a
+                  >
+                </li>
+                <li>
+                  <img
+                    class="thumb"
+                    src="./images/thumbnail_sample4.jpg"
+                    alt="샘플 이미지"
+                  />
+                  <a href="#"
+                    >[복층빌라] 한남동 월세 (방:4/욕실2) / 157㎡ / 보증금 3,000
+                    월세80</a
+                  >
+                </li>
+                <li>
+                  <img
+                    class="thumb"
+                    src="./images/thumbnail_sample5.jpg"
+                    alt="샘플 이미지"
+                  />
+                  <a href="#"
+                    >[아파트] 역삼동 급매 (방:3/욕실2) / 109㎡ / 매매가
+                    11,800</a
+                  >
+                </li>
+              </ul>
+            </article>
+          </div>
         </section>
       </main>
       <footer>
